--- a/style.css
+++ b/style.css
@@ -61,17 +61,20 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-image: url(images/comic-img1.jpg);
-    height:80vh;
-    width: 80vw;
-    background-size: contain;
     margin: auto;
     margin-top:20vh;
-    animation: slide-3 10s;
 }
-#l-side:checked + .slider4{
+.animation-11{
+    display: flex;
+    height:80vh;
+    width: 80vw;  
+    background-image: url(images/comic-img7.jpg);
+}
+#l-radio:checked + .animation-11{
+    animation: slide-3 10s;
     animation-direction: reverse;
 }
-#r-side:checked + .slider4{
+#r-radio:checked + .animation-11{
+    animation: slide-3 10s;
     animation-direction: normal;
 }
