--- a/style.css
+++ b/style.css
@@ -67,17 +67,18 @@ body{
     margin: auto;
     margin-top:20vh;
 }
-.animation-11{
+#animation-11{
     display: flex;
     height:80vh;
     width: 80vw;  
     background-image: url(images/comic-img7.jpg);
+    background-size: cover;
 }
-#l-radio:checked + .animation-11{
-    animation: slide-3 10s;
+#l-radio:checked + #animation-11{
+    animation: slide-3 10s infinite;
     animation-direction: reverse;
 }
-#r-radio:checked + .animation-11{
-    animation: slide-3 10s;
+#r-radio:checked + #animation-11{
+    animation: slide-3 10s infinite;
     animation-direction: normal;
 }
