--- a/style.css
+++ b/style.css
@@ -74,11 +74,50 @@ body{
     background-image: url(images/comic-img7.jpg);
     background-size: cover;
 }
-#l-radio:checked + #animation-11{
+input[type="radio"]{
+    width:5vw;
+    height:15vh;
+}
+#l-radio:hover + #animation-11{
     animation: slide-3 10s infinite;
     animation-direction: reverse;
 }
-#r-radio:checked + #animation-11{
+#rightRadio:hover + #animation-11{
+    animation: slide-2 10s infinite;
+    animation-direction: reverse;
+}
+/* Task 5 */
+.sl2-img12{
+    background-image: url(images/comic-img1.jpg);
+    width:30%;
+    height:40vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.sl2-img22{
+    background-image: url(images/comic-img4.jpg);
+    width:30%;
+    height:40vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.sl2-img32{
+    background-image: url(images/comic-img7.jpg);
+    width:30%;
+    height:40vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#l-radio2:hover + .sl2-img12{
+    animation: slide-1 10s infinite;
+    animation-direction: reverse;
+}
+#l-radio2:hover + .sl2-img22{
+    animation: slide-2 10s infinite;
+    animation-direction: reverse;
+}
+#l-radio2:hover + .sl2-img32{
     animation: slide-3 10s infinite;
-    animation-direction: normal;
+    animation-direction: reverse;
 }
