--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ body{
     justify-content: space-between;
     margin: auto;
     margin-top:20vh;
+    flex-direction: row;
+}
+#rightRadio{
+    order: 2;
 }
 #animation-11{
     display: flex;
@@ -78,11 +82,11 @@ input[type="radio"]{
     width:5vw;
     height:15vh;
 }
-#l-radio:hover + #animation-11{
+#l-radio:hover ~ #animation-11{
     animation: slide-3 10s infinite;
     animation-direction: reverse;
 }
-#rightRadio:hover + #animation-11{
+#rightRadio:hover ~ #animation-11{
     animation: slide-2 10s infinite;
     animation-direction: reverse;
 }
